<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flights_search_tl_origin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/flights_search_tl_origin"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <AutoCompleteTextView
            android:id="@+id/flights_search_et_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flights_search_tl_destination"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/flights_search_tl_destination"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <AutoCompleteTextView
            android:id="@+id/flights_search_et_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/flights_search_tl_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/flights_search_tl_type"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <RadioGroup
            android:id="@+id/flights_search_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkedButton="@+id/flights_search_rb_return">

            <RadioButton
                android:id="@+id/flights_search_rb_oneway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flights_search_rb_oneway" />

            <RadioButton
                android:id="@+id/flights_search_rb_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flights_search_rb_return" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flights_search_tl_dep_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/flights_search_tl_dep_date"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/flights_search_et_dep_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flights_search_tl_arr_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/flights_search_tl_arr_date"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:visibility="visible" />

        <EditText
            android:id="@+id/flights_search_et_arr_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>
