<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        app:srcCompat="@drawable/flight2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/flights_list_tl_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textAlignment="gravity"
                android:text="@string/flights_list_tl_provider"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/flights_list_provider_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="gravity"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/flights_list_tl_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/flights_list_tl_origin"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/flights_list_origin_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="gravity"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/flights_list_tl_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/flights_list_tl_destination"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/flights_list_destination_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="gravity"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flights_list_tl_dep_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/flights_list_tl_dep_date"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/flights_list_dep_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="gravity"
                android:text="TextView" />

            <TextView
                android:id="@+id/flights_list_tl_arr_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/flights_list_tl_arr_date"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/flights_list_arr_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="gravity"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flights_list_tl_dep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/flights_list_tl_dep_time"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/flights_list_dep_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="gravity"
                android:text="TextView" />

            <TextView
                android:id="@+id/flights_list_tl_arr_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/flights_list_tl_arr_time"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/flights_list_arr_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="gravity"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flights_list_tl_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/flights_list_tl_price"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/flights_list_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="gravity"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/flights_list_b_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flights_list_b_book" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
