<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:backgroundTint="@color/common_google_signin_btn_text_light_focused">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        app:srcCompat="@drawable/car3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/car_rentals_list_tl_agency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/car_rentals_list_tl_agency"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/car_rentals_list_agency_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/car_rentals_list_tl_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/car_rental_list_tl_type"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/car_rentals_list_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="gravity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/car_rentals_list_tl_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/car_rentals_search_tl_fromDate"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/car_rentals_list_from_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="gravity" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/car_rentals_list_tl_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/car_rentals_search_tl_toDate"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/car_rentals_list_to_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="gravity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/car_rentals_list_tl_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/hotels_list_price"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/car_rentals_list_total_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="gravity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/car_rentals_list_b_book"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/hotels_list_b_book" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
